--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,11 +8,13 @@
     color: white;
 }
 
-html ,body{
+html,
+body {
     height: 100%;
     width: 100%;
 }
-nav{
+
+nav {
     position: fixed;
     display: flex;
     align-items: flex-start;
@@ -20,40 +23,46 @@ nav{
     padding: 2vw 10.4vw;
     justify-content: space-between;
     z-index: 10;
+    background-color: #111;
 }
-.nav_part2{
+
+.nav_part2 {
     display: flex;
-    gap: 2vw;;
+    gap: 2vw;
+    ;
     align-items: flex-start;
-    padding: 1vh 0 ;
+    padding: 1vh 0;
     position: relative;
     z-index: 10;
 }
-.nav_part2 h4{
+
+.nav_part2 h4 {
     font-family: 'Gilroy-Regular', sans-serif;
     font-size: 0.73vw;
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 2.6vw;
 }
-.nav_part2 h5{
+
+.nav_part2 h5 {
     margin-bottom: 1vw;
     display: none;
     overflow: hidden;
 }
-.nav_part2 h5 span{
+
+.nav_part2 h5 span {
     font-family: 'Gilroy-Regular', sans-serif;
     font-size: 0.748w;
     font-weight: 400;
-   transform: translateY("25px");
+    transform: translateY("25px");
 
     display: inline-block;
-   
-  
+
+
 
 }
-    
-#nav-bottom{
+
+#nav-bottom {
     width: 79%;
     height: 0vh;
     position: absolute;
@@ -86,7 +95,7 @@ nav{
     padding-left: 17.9vw;
     /* padding-top: 6vw; */
 
-nav button{
+nav button {
     background-color: #0BA34E;
     display: flex;
     align-items: center;
@@ -97,26 +106,31 @@ nav button{
     border: none;
     font-weight: 700;
 }
-nav button svg{
+
+nav button svg {
     height: 1.6vw;
     margin-left: 1.6vw;
 }
-.bottom-div{
+
+.bottom-div {
     margin-top: 2vw;
     /* background-color: red; */
 }
-.bottom-div h5{
+
+.bottom-div h5 {
     /* background-color: red; */
     margin-bottom: 0.4vw;
     overflow: hidden;
 }
-.bottom-div h5 span{
+
+.bottom-div h5 span {
     display: inline-block;
-    font-size:  0.75vw;
+    font-size: 0.75vw;
     font-weight: 500;
-    opacity: 0;    
+    opacity: 0;
 }
-#page1{
+
+#page1 {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -124,39 +138,46 @@ nav button svg{
     align-items: center;
     justify-content: center;
     background-color: #111;
+    position: relative;
 }
-#page1 h1 svg{
+
+#page1 h1 svg {
     /* maine height aur width apne hisaab se daali hai 15:14 */
-    height:13vh;
+    height: 13vh;
     width: 6.9vw;
     background-color: #0BA34E;
-    border-radius:50%;
-    
+    border-radius: 50%;
+
 }
-#page1 h1{
+
+#page1 h1 {
     font-size: 8.5vw;
     text-transform: uppercase;
-    font-weight: 900;   
+    font-weight: 900;
     line-height: 8.5vw;
 }
-#page1{
+
+#page1 {
     height: 100vh;
     width: 100vw;
     background-color: #111;
 }
 
-#page1 p{
+#page1 p {
     text-align: center;
     font-family: 'Gilroy-Regular', sans-serif;
     margin-top: 3vh;
 }
-#page1-something{
+
+#page1-something {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#page1-something h4{
-    font-family: 'Gilroy-Regular', sans-serif;;
+
+#page1-something h4 {
+    font-family: 'Gilroy-Regular', sans-serif;
+    ;
     font-weight: 400;
     margin-top: 0.5vw;
     text-transform: lowercase;
@@ -164,58 +185,717 @@ nav button svg{
     border: 1px solid white;
     border-radius: 50px;
 }
-#page1-something h4:nth-last-child(2){
-    border:none;
+
+#page1-something h4:nth-last-child(2) {
+    border: none;
     padding: 2px;
-    
+
 }
 
-#moving-div{
+#moving-div {
 
     margin: 10vh;
     position: absolute;
     bottom: 3%;
-  width: 44%;
-   white-space: nowrap;
-   overflow: hidden;
-   padding: 1.2vw;
+    width: 44%;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 1.2vw;
 }
+
 #moving-div .move {
-  display: inline-block;
-   animation-name: mobe;
-   animation-duration: 9s;
-   animation-timing-function: linear;
-   animation-iteration-count: infinite;
+    display: inline-block;
+    animation-name: mobe;
+    animation-duration: 9s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
+
 @keyframes mobe {
-    0%{
-        trasnsform : translateX(0);
+    0% {
+        trasnsform: translateX(0);
     }
-    100%{
-        transform : translateX(-100%);
+
+    100% {
+        transform: translateX(-100%);
     }
 }
- 
-#blur-left   {
+
+#blur-left {
     height: 100%;
     width: 20%;
     position: absolute;
     background-color: red;
     top: 0;
-    left:0%;
-    background : linear-gradient(to right,#111,transparent  );
+    left: 0%;
+    background: linear-gradient(to right, #111, transparent);
     z-index: 2;
 }
-#blur-right   {
+
+#blur-right {
     height: 100%;
     width: 20%;
     position: absolute;
-    background : linear-gradient(to right,transparent , #111);
+    background: linear-gradient(to right, transparent, #111);
     top: 0;
-    right:0%;
+    right: 0%;
     z-index: 2;
 }
-#moving-div .move img{
+
+#moving-div .move img {
     height: 1vw;
     margin: 0 1.2vw;
+}
+
+#page2 {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    padding: 0vw 11.5vw;
+    color: white;
+    padding-bottom: 8vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #111;
+    border-top: 1px solid #333;
+}
+
+#page2-left {
+    height: 100%;
+    width: 40%;
+    /* background-color: #333; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 3vw 0;
+    font-family: 'Gilroy-Regular', sans-serif;
+
+}
+
+#page2-left p {
+    font-size: 0.89vw;
+
+    font-family: 'Gilroy-Regular', sans-serif;
+}
+
+#page2-left h5 {
+    width: 79%;
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-weight: 400;
+    font-size: 1.1vw;
+}
+
+#page2-right {
+    height: 100%;
+    width: 50%;
+    /* background-color: #333; */
+}
+
+
+.right-elem {
+
+    color: white;
+    position: relative;
+    /* background-color: red; */
+    object-fit: cover;
+    height: 15vh;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+    border-bottom: 1px solid #333;
+}
+
+.right-elem h2 {
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-size: 1.4vw;
+    font-weight: 400;
+    color: white;
+}
+
+.right-elem img {
+    height: 7vw;
+    width: 7vw;
+    border-radius: 50%;
+    position: absolute;
+    object-fit: cover;
+    opacity: 0;
+    scale: 0;
+}
+
+
+#page3 {
+    height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    background-image: url(https://lazarev.kiev.ua/la24/reel-cover.webp);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.page3-center {
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    padding: 1vw;
+    flex-direction: column;
+}
+
+.page3-center .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3.3vw;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.page3-center .icon i {
+    color: #000;
+    font-size: 2.8vw;
+
+}
+
+.page3-center h5 {
+    font-size: 0.8vw;
+    background-color: #fff;
+    color: #000;
+    border-radius: 50px;
+    padding: 12px 26px 10px 26px;
+    margin-top: 0.5vw;
+    font-weight: 700;
+    opacity: 0;
+    transition: all ease 0.5s;
+    transform: translateY(16%);
+    text-transform: uppercase;
+}
+
+.page3-center:hover h5 {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+#page3 video {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    opacity: 0;
+    border-radius: 30px;
+    z-index: 99999;
+
+}
+
+#page4 {
+    height: 130vh;
+
+    width: 100%;
+    display: flex;
+    padding: 11.5vw;
+}
+
+.page4left {
+    margin: 0;
+    width: 40%;
+    text-transform: capitalize;
+    height: 100vh;
+    color: #111;
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-weight: 600;
+    font-size: 2vw;
+
+}
+
+.page4left h1 {
+    color: #111;
+    height: 100vh;
+}
+
+.page4right {
+    height: 100%;
+    width: 60%;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px 10px;
+    padding-left: 155px;
+    padding-right: 0px;
+
+
+
+}
+
+.page4right h2 {
+    font-family: 'Gilroy-medium', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #000;
+}
+
+.same-same {
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-weight: 100;
+    color: #bbbbbb;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+#page5 {
+    margin-bottom: 25 px;
+    justify-content: center;
+    height: 100%;
+    width: 100vw;
+    background-color: 0 rgb(255, 255, 255);
+    display: grid;
+    grid-template-rows: auto auto auto;
+
+}
+
+.beach {
+    width: 80vw;
+    align-content: center;
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+
+
+}
+
+#page5 .box {
+    margin: 8px 13px 8px;
+    height: 35vh;
+    gap: 10px;
+    padding: 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(245, 245, 245);
+    color: #000;
+}
+
+.box h1,
+h2 {
+    color: #000;
+    font-family: 'Gilroy-Regular', sans-serif;
+}
+
+.box h1 {
+    margin-top: 0;
+    font-weight: 800;
+    font-size: 50px;
+}
+
+.box h2 {
+    margin-top: 10px;
+    padding-top: 2px;
+
+    font-weight: 100;
+    font-size: 14px;
+}
+
+.box h6 {
+    color: #b5b5b5;
+    font-family: 'Gilroy-Regular', sans-serif;
+    margin-top: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-weight: 100;
+    font-size: 15px;
+}
+
+#paeg6 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: white;
+    position: relative;
+    padding-bottom: 13vh;
+}
+
+.section {
+    width: 100%;
+    height: 72vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 13vh 11vw;
+    padding-bottom: 0;
+}
+
+.sec-left h2 {
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-size: 2.1vw;
+    font-weight: 500;
+    color: #000;
+}
+
+.sec-left p {
+    color: #000;
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-weight: 300;
+    margin-top: 10vh;
+    font-size: 1vw;
+}
+
+.sec-left {
+    width: 25%;
+    padding-top: 2vh;
+    height: 100%;
+    /* background-color:greenyellow ; */
+    border-top: 3px solid #000;
+}
+
+.sec-right {
+    width: 70%;
+    height: 100%;
+    background-color: orange;
+    position: relative;
+}
+
+.sec-right img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.sec-right video {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    position: absolute;
+    left: 0;
+    object-fit: fill;
+    opacity: 0;
+}
+
+#page7 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 5vh 10.5vw;
+}
+
+#page7>button {
+    background-color: green;
+    padding: 0.9vw 2.5vw;
+    border: none;
+    font-size: 1vw;
+    text-transform: uppercase;
+    border-radius: 50px;
+    font-family: 'Gilroy-Medium', sans-serif;
+    position: sticky;
+    top: 15%;
+
+}
+
+.page7-right {
+    width: 70%;
+
+}
+
+.page7-right p {
+    font-size: 2.1vw;
+    font-family: 'Gilroy-Medium', sans-serif;
+}
+
+.page7-right p span {
+    width: 15vw;
+    display: inline-block;
+}
+
+.page7content {
+    margin-top: 5vh;
+    width: 100%;
+
+    margin-top: 4vw;
+
+    padding: 5vh 0;
+}
+
+.page7content h1 {
+    font-size: 5vh;
+}
+
+.page7content #flex {
+    display: flex;
+}
+
+.page7content #flex h4 {
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-bottom: 4vh;
+    font-weight: 400;
+    font-size: 0.8vw;
+    font-family: 'Gilroy-Medium', sans-serif;
+    border: 1px solid white
+}
+
+.page7-elem {
+    display: flex;
+    position: relative;
+    align-items: flex-start;
+    padding: 3vh 0 9vh;
+    justify-content: space-between;
+
+    overflow: hidden;
+}
+
+.page7-elem p {
+    font-family: 'Gilroy-Medium', sans-serif;
+    width: 60%;
+    font-size: 0.8vw;
+    position: relative;
+    z-index: 8;
+
+}
+
+.page7-elem h3 {
+    font-family: 'Gilroy-Medium', sans-serif;
+    font-size: 1.5vw;
+    font-weight: 400;
+    position: relative;
+    z-index: 8;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+
+}
+
+.page7-elem h3,
+i {
+    font-size: 1.6vw;
+    position: relative;
+    z-index: 8;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+
+
+}
+
+.over7 {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    background-color: #333;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    z-index: 1;
+
+
+}
+
+.page7-elem:hover h3 {
+    padding-left: 1vw;
+
+}
+
+.page7-elem:hover i {
+    padding-right: 1vw;
+
+
+}
+
+.page7-elem:hover .over7 {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.page7-elem:hover {
+    border-top: 2px solid white;
+}
+
+summary::marker {
+    content: "";
+}
+
+.uiux {
+    border-top: 2px solid white;
+    padding: 3vh 0;
+
+}
+
+.product {
+    border-top: 2px solid white;
+    padding: 3vh 0;
+
+}
+
+.arrow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrow i {
+    align-items: center;
+    justify-content: flex-end;
+    justify-items: flex-end;
+}
+
+.page8 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    padding: 5vh 10vw;
+
+}
+
+.page8 h1 {
+    font-size: 5.5vw;
+    color: #000;
+    padding-left: 22vw;
+    padding-right: 5vw;
+    line-height: 7vw;
+    padding-bottom: 10vh;
+    border-bottom: 1px solid #dadada;
+
+
+}
+
+.page8content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 15vh;
+}
+
+.page8content .right8 {
+    width: 70%;
+}
+
+.page8content .right8 p {
+    font-family: 'Gilroy-Regular ', sans-serif;
+    font-weight: 510;
+    font-family: 1.5vw;
+    color: #000;
+    font-size: 22px;
+    margin-bottom: 15vh;
+    width: 80%
+}
+
+.blue-btn {
+    background-color: #0BA34E;
+    width: 15vw;
+    height: 3vw;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4f5bff;
+}
+
+.blue-btn h4 {
+    font-family: 'Gilroy-Bold ', sans-serif;
+    position: absolute;
+    text-transform: uppercase;
+    font-size: 0.85vw;
+    font-weight: 550;
+}
+
+.blue-btn h4 i {
+    font-size: 1vw;
+    font-weight: 100;
+    margin-left: 0.5vw;
+    color: white;
+}
+
+.page8bottom {
+    height: 45vh;
+    width: 100%;
+    /* background-color: rgb(255, 0, 0); */
+    border-top: 1px solid #dadada;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+
+#bottom8part1 {
+    border-radius: 1px solid white;
+    width: 30%;
+    height: 100%;
+    /* background-color: red; */
+  
+}
+
+#bottom8part2 {
+    border-radius: 1px solid white;
+    width: 28%;
+    height: 100%;
+    /* background-color: red; */
+    border-left: 1px solid #dadada
+}
+
+#btm8-part3 {
+    border-radius: 1px solid white;
+    width: 15%;
+    border-left: 1px solid #dadada;
+    height: 100%;
+    /* background-color: red; */
+}
+
+#btm8-part4 {
+    border-radius: 1px solid white;
+    width: 15%;
+    height: 100%;
+    /* background-color: red; */
+    border-left: 1px solid #dadada;
+}
+#btm8-part5{
+    border-radius: 1px solid white;
+    width: 15%;
+    height: 100%;
+    border-left: 1px solid #dadada;
+    /* background-color: red; */
+}
+
+.btm8-parts h5{
+    font-family: 'Gilroy-Regular ', sans-serif;
+
+    color:#000;     
+    font-weight: 500;
+    font-size: 1vw;
+    margin-bottom: 6vh;
+}
+
+.btm8-parts h4{
+    background-color: #111;
+    width: 70%;
+    font-size: 0.8vw;
+    font-weight: 500;
+    padding: 5px 9px;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    margin-bottom: 0.3vh;
+}
+.btm8-parts h4 span{
+    background-color: #333;
+    padding: 1vw;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.5vw;
+    height: 1.5vw;
+    margin-right: 1vw;  
+
+}
+.btm8-parts{
+    padding-left: 1%;
+}
+.page9{
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
 }
