final bhai final

--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ nav button svg {
     padding: 0 10px 0;
     display: flex;
     flex-direction: column;
-    background-color: rgb(245, 245, 245);
+    background-color: rgba(216, 216, 216, 0.849);
     color: #000;
 }
 
